--- a/public/screen.css
+++ b/public/screen.css
@@ -10,3 +10,13 @@ body {
   margin: 0;
   min-height: 100%;
 }
+
+.search-bar {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+}
+
+.search-input {
+  width: 20rem;
+}
